# Palantir_v2

Palantir_v2/sentinel/: README.md  config.yaml  main.go
Palantir_v2/sentinel/api/: agent.proto
Palantir_v2/sentinel/cmd/: cli.go
Palantir_v2/sentinel/eyes/cpp/greeter/: CMakeLists.txt
Palantir_v2/sentinel/eyes/rust/greeter/: Cargo.toml  build.rs
Palantir_v2/sentinel/eyes/rust/greeter/src/: main.rs
Palantir_v2/sentinel/internal/logging/: logger.go
Palantir_v2/sentinel/webui/: index.html
sentinel/: config.yaml  go.mod  go.sum
sentinel/api/: agent.proto  sentinel_server.go
sentinel/cmd/: cli.go  gui.go
sentinel/eyes/cpp/greeter/: main.cpp
sentinel/internal/config/: config.go
sentinel/internal/plugin/: loader.go
sentinel/internal/security/: tls.go
sentinel/internal/store/: sqlite.go
sentinel/pkg/ui/: manager.go
sentinel/pkg/web/: monitor.go  server.go
sentinel/plugins/greeter/: main.go
sentinel/proto/: agent.pb.go  agent_grpc.pb.go
sentinel/types/: plugin.go
sentinel/webui/: index.html
utils/: creations.ps1  push.ps1
